force-app/main/default/objects/Parts_Inventory_Transaction__c/Parts_Inventory_Transaction__c.object-meta.xml
<CustomObject>
    <label>Parts Inventory Transaction</label>
    <nameField>
        <label>Parts Inventory Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>