force-app/main/default/objects/Parts_Inventory_Transaction__c/fields/Confirmed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Quantity__c</fullName>
    <label>Confirmed Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>