force-app/main/default/objects/Parts_Inventory_Transaction__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>