force-app/main/default/objects/Parts_Inventory_Transaction__c/fields/Parts_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Parts_Inventory__c</fullName>
    <label>Parts Inventory</label>
    <referenceTo>Parts_Inventory__c</referenceTo>
    <relationshipLabel>Parts Inventory Transaction</relationshipLabel>
    <relationshipName>Parts_Inventory_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>