force-app/main/default/objects/Parts_Inventory_Transaction__c/fields/Parts_Shipment_Log__c.field-meta.xml
<CustomField>
    <fullName>Parts_Shipment_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts Shipment Log</label>
    <referenceTo>PartsShipment__c</referenceTo>
    <relationshipLabel>Parts Inventory Transaction</relationshipLabel>
    <relationshipName>Parts_Inventory_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>