force-app/main/default/objects/Parts_Inventory_Transaction__c/fields/PartsInventoryTransactionNo__c.field-meta.xml
<CustomField>
    <fullName>PartsInventoryTransactionNo__c</fullName>
    <displayFormat>PIT-{00000}</displayFormat>
    <label>PartsInventoryTransactionNo</label>
    <type>AutoNumber</type>
</CustomField>