force-app/main/default/objects/Parts_Inventory_Transaction__c/fields/Previous_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quantity__c</fullName>
    <label>Previous Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>