force-app/main/default/objects/Parts_Inventory_Transaction__c/fields/Transaction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reason__c</fullName>
    <label>Transaction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loss</fullName>
            </value>
            <value>
                <fullName>Wastage/Spillage</fullName>
            </value>
            <value>
                <fullName>Arrival of Claimed parts</fullName>
            </value>
            <value>
                <fullName>Parts return</fullName>
            </value>
            <value>
                <fullName>Other surplus</fullName>
            </value>
            <value>
                <fullName>Shipment Confirmed</fullName>
            </value>
            <value>
                <fullName>Job Order Consumed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>