force-app/main/default/objects/Parts_Inventory_Transaction__c/fields/Updated_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Updated_Quantity__c</fullName>
    <label>Updated Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>