force-app/main/default/objects/Parts_Inventory_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PartsInventoryTransactionNo__c</columns>
    <columns>Parts_Inventory__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>